# fastapi_books

./: .gitignore  README.md  makefile  pyproject.toml
src/: books_v1.py  books_v2.py  interfaces.py  main.py  models.py  validation.py
src/fakes/: fake_book.py
