[tool.poetry]
name = "fastapi-books"
version = "0.1.0"
description = ""
authors = ["Kevin Ruan Soares <kevin.soares@azos.com.br>"]
readme = "README.md"
packages = [{include = "fastapi_books"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
