[tool.poetry]
name = "fastapi-books"
version = "0.1.0"
description = ""
authors = ["Kevin Ruan Soares <kevin.soares@azos.com.br>"]
readme = "README.md"
packages = [{include = "fastapi_books"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.4.2"
mypy = "^1.7.0"
flake8 = "^6.1.0"
pylint = "^3.0.2"
isort = "^5.12.0"
black = "^23.11.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"

[tool.isort]
profile = "black"
line_length = "120"

[tool.black]
line-length = 120

[tool.mypy]
disallow_incomplete_defs = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
exclude = ["src/frameworks", "tests"]

[tool.pylint]
init-hook = "import sys; sys.path.append('./src'), sys.path.append('./tests')"
fail-under = "10"

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.messages_control]
disable = ["C0114", "C0116", "C0301", "R0903", "W1203", "E0611", "R0913"]

[tool.pylint.similarities]
ignore-imports = "yes"
min-similarity-lines = "15"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "tests"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
